# tg_streamer_bot

./: .env.example  .gitignore  .python-version  pyproject.toml
app/: __main__.py
app/bot/: __init__.py  filters.py  handlers.py
app/core/: config.py  enums.py  errors.py  interfaces.py  schemas.py
app/core/config/: __init__.py  constants.py  environ.py  logger.py
app/deliver/: __init__.py  constants.py  context.py  interfaces.py  player.py  schemas.py  streamer.py  utils.py
app/receive/: __init__.py  constants.py  downloader.py  interfaces.py  schemas.py
app/services/: downloader.py  streamer.py
app/utils/: streaming.py
scripts/: check_metadata.py  infinite_image_stream.py  telegram_live_stream.py  video_concatenation.py  video_production.py
